--- a/Corte_2_Proyecto/.project
+++ b/Corte_2_Proyecto/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Corte_2_Proyecto</name>
+	<name>AeropuertoElDorado</name>
 	<comment></comment>
 	<projects>
 	</projects>
